Add new done todo list in ui
