# docs/swagger.json
@@ -76,41 +76,9 @@
                         }
                     }
                 }
-            }
-        },
-        "/healthz": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "health"
-                ],
-                "summary": "Health check",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/handler.ResponseData"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
-        "/todos": {
+            },
             "post": {
+                "description": "Creates a new todo item with the specified task and optional priority",
                 "consumes": [
                     "application/json"
                 ],
@@ -123,7 +91,7 @@
                 "summary": "Create a new todo",
                 "parameters": [
                     {
-                        "description": "json",
+                        "description": "Todo creation request",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -134,55 +102,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/handler.ResponseError"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/model.Todo"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ResponseError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ResponseError"
-                        }
-                    }
-                }
-            }
-        },
-        "/todos/:id": {
-            "get": {
-                "tags": [
-                    "todos"
-                ],
-                "summary": "Find a todo",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                        "description": "Successfully created a new todo item",
                         "schema": {
                             "allOf": [
                                 {
@@ -200,19 +120,75 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ResponseError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
+                        "description": "Invalid request parameters",
                         "schema": {
                             "$ref": "#/definitions/handler.ResponseError"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Internal server error while creating the todo item",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/todos/{id}": {
+            "get": {
+                "description": "Retrieves a todo item with the specified ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "todos"
+                ],
+                "summary": "Find a todo",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the todo to be retrieved",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved the todo item",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.ResponseData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "Data": {
+                                            "$ref": "#/definitions/model.Todo"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request parameters",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Todo item not found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error while retrieving the todo item",
                         "schema": {
                             "$ref": "#/definitions/handler.ResponseError"
                         }
@@ -220,6 +196,7 @@
                 }
             },
             "put": {
+                "description": "Updates the details of a todo item with the specified ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -232,24 +209,25 @@
                 "summary": "Update a todo",
                 "parameters": [
                     {
-                        "description": "body",
-                        "name": "body",
+                        "type": "integer",
+                        "description": "ID of the todo to be updated",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Todo update request body",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/handler.UpdateRequestBody"
                         }
-                    },
-                    {
-                        "type": "integer",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "Successfully updated the todo item",
                         "schema": {
                             "allOf": [
                                 {
@@ -267,13 +245,19 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request parameters",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Todo item not found",
                         "schema": {
                             "$ref": "#/definitions/handler.ResponseError"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Internal server error while updating the todo item",
                         "schema": {
                             "$ref": "#/definitions/handler.ResponseError"
                         }
@@ -281,6 +265,13 @@
                 }
             },
             "delete": {
+                "description": "Deletes a todo item with the specified ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "todos"
                 ],
@@ -288,6 +279,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "ID of the todo to be deleted",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -295,18 +287,56 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "No Content"
+                        "description": "Successfully deleted the todo item"
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request parameters",
                         "schema": {
                             "$ref": "#/definitions/handler.ResponseError"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Todo item not found",
                         "schema": {
                             "$ref": "#/definitions/handler.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error while deleting the todo item",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/healthz": {
+            "get": {
+                "description": "Check the health status of the service",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Health Check",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.ResponseData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "Data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "500": {
@@ -326,6 +356,9 @@
                 "task"
             ],
             "properties": {
+                "priority": {
+                    "type": "integer"
+                },
                 "task": {
                     "type": "string"
                 }
@@ -393,6 +426,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "priority": {
                     "type": "integer"
                 },
                 "status": {
