# internal/handler/health.go
@@ -19,11 +19,15 @@ func NewHealth() HealthHandler {
 	return &healthHandler{}
 }
 
-// @Summary	Health check
-// @Tags		health
-// @Produce	json
-// @Success	200	{object}	ResponseData{data=time.Time}
-// @Router		/healthz [get]
+// Healthz handles the health check endpoint.
+//
+//	@Summary		Health Check
+//	@Description	Check the health status of the service
+//	@Tags			health
+//	@Produce		json
+//	@Success		200	{object}	ResponseData{Data=time.Time}
+//	@Failure		500	{object}	ResponseError
+//	@Router			/healthz [get]
 func (t *healthHandler) Healthz(c echo.Context) error {
 	return c.JSON(http.StatusOK, ResponseData{Data: time.Now()})
 }
